<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:padding="@dimen/table_data_padding"
    android:visibility="visible"
    android:weightSum="6"
    android:background="?attr/selectableItemBackground"
    >

    <TextView
        android:id="@+id/zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/table_data_padding"
        android:text="@string/test_zipcode"
        android:textAlignment="viewStart"
        android:textSize="@dimen/table_data_text_size" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:padding="@dimen/table_data_padding"
        android:text="@string/test_locality"
        android:textAlignment="center"
        android:textSize="@dimen/table_data_text_size" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/table_data_padding"
        android:text="@string/test_state"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/table_data_text_size" />
</TableRow>