<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.results.SearchResultTableActivity">

    <TextView
        android:id="@+id/search_tokens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/table_padding"
        android:text="@string/search_token_feedback"
        android:textAlignment="center"
        android:textSize="@dimen/table_data_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/table_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/table_data_margin"
        android:padding="@dimen/table_data_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_tokens">

        <TableRow
            android:id="@+id/table_headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/table_heading_margin"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:id="@+id/heading_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/heading_zip_code"
                android:textAlignment="viewStart"
                android:textSize="@dimen/table_heading_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heading_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/heading_city"
                android:textAlignment="center"
                android:textSize="@dimen/table_heading_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heading_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heading_state"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/table_heading_text_size"
                android:textStyle="bold" />
        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/item_search_result">

        </android.support.v7.widget.RecyclerView>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
